err/centinel-dev.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/centinel'...
Compiling './lib/python3.5/site-packages/centinel/backend.py'...
***   File "./lib/python3.5/site-packages/centinel/backend.py", line 278
    print "Please go to %s to give your consent." % (consent_url)
                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/centinel/cli.py'...
***   File "./lib/python3.5/site-packages/centinel/cli.py", line 82
    print 'Configuration file does not exist.'
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/centinel/data'...
Listing './lib/python3.5/site-packages/centinel/experiments'...
Listing './lib/python3.5/site-packages/centinel/primitives'...
Listing './lib/python3.5/site-packages/centinel/vpn'...
Compiling './lib/python3.5/site-packages/centinel/vpn/cli.py'...
***   File "./lib/python3.5/site-packages/centinel/vpn/cli.py", line 82
    print "(%d/%d) %s" % (number, total, filename)
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/centinel/vpn/hma.py'...
***   File "./lib/python3.5/site-packages/centinel/vpn/hma.py", line 62
    print "Usage {0} <directory to create VPNs in>".format(sys.argv[0])
                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/centinel/vpn/openvpn.py'...
***   File "./lib/python3.5/site-packages/centinel/vpn/openvpn.py", line 73
    print "openvpn started"
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/centinel_dev-0.1.5.4.1.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/curl'...
Listing './lib/python3.5/site-packages/dns'...
Listing './lib/python3.5/site-packages/dns/rdtypes'...
Listing './lib/python3.5/site-packages/dns/rdtypes/ANY'...
Listing './lib/python3.5/site-packages/dns/rdtypes/IN'...
Listing './lib/python3.5/site-packages/dnspython-1.15.0.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycurl-7.43.0.1.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/trparse-0.2.1.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.9.1.egg-info'...
Listing './share'...
Listing './share/doc'...
Listing './share/doc/pycurl'...
Listing './share/doc/pycurl/examples'...
Compiling './share/doc/pycurl/examples/basicfirst.py'...
Compiling './share/doc/pycurl/examples/file_upload.py'...
Compiling './share/doc/pycurl/examples/linksys.py'...
Listing './share/doc/pycurl/examples/quickstart'...
Compiling './share/doc/pycurl/examples/quickstart/file_upload_buffer.py'...
Compiling './share/doc/pycurl/examples/quickstart/file_upload_real.py'...
Compiling './share/doc/pycurl/examples/quickstart/file_upload_real_fancy.py'...
Compiling './share/doc/pycurl/examples/quickstart/follow_redirect.py'...
Compiling './share/doc/pycurl/examples/quickstart/form_post.py'...
Compiling './share/doc/pycurl/examples/quickstart/get.py'...
Compiling './share/doc/pycurl/examples/quickstart/get_python2.py'...
Compiling './share/doc/pycurl/examples/quickstart/get_python3.py'...
Compiling './share/doc/pycurl/examples/quickstart/response_headers.py'...
Compiling './share/doc/pycurl/examples/quickstart/response_info.py'...
Compiling './share/doc/pycurl/examples/quickstart/write_file.py'...
Compiling './share/doc/pycurl/examples/retriever-multi.py'...
Compiling './share/doc/pycurl/examples/retriever.py'...
Compiling './share/doc/pycurl/examples/sfquery.py'...
Compiling './share/doc/pycurl/examples/smtp.py'...
Compiling './share/doc/pycurl/examples/ssh_keyfunction.py'...
Compiling './share/doc/pycurl/examples/xmlrpc_curl.py'...
Listing './share/python-wheels'...
